# caphs-minimal-repro

./: .gitignore  LICENSE  README.md
Plan 6/legacy/reproducibility_package/: README.md  pyproject.toml
Plan 6/legacy/reproducibility_package/data/v2_holdout_suite/workloads/: D-bursty_mixed-s06.json  D-bursty_mixed-s07.json  D-bursty_mixed-s08.json  D-bursty_mixed-s09.json  D-bursty_mixed-s10.json  D-dag_stream-s06.json  D-dag_stream-s07.json  D-dag_stream-s08.json  D-dag_stream-s09.json  D-dag_stream-s10.json  D-steady_mixed-s06.json  D-steady_mixed-s07.json  D-steady_mixed-s08.json  D-steady_mixed-s09.json  D-steady_mixed-s10.json  D-thermal_pressure-s06.json  D-thermal_pressure-s07.json  D-thermal_pressure-s08.json  D-thermal_pressure-s09.json  D-thermal_pressure-s10.json
Plan 6/legacy/reproducibility_package/data/v2_main_suite/workloads/: D-bursty_mixed-s01.json  D-bursty_mixed-s02.json  D-bursty_mixed-s03.json  D-bursty_mixed-s04.json  D-bursty_mixed-s05.json  D-dag_stream-s01.json  D-dag_stream-s02.json  D-dag_stream-s03.json  D-dag_stream-s04.json  D-dag_stream-s05.json  D-steady_mixed-s01.json  (+9 more)
Plan 6/legacy/reproducibility_package/experiments/: analyze_plan6_v2_suite.py  run_plan6_v2_campaign.py  summarize_plan6_v2_campaign.py
Plan 6/legacy/reproducibility_package/experiments/configs/: plan6_v2_holdout_suite.yaml  plan6_v2_main_suite.yaml
Plan 6/legacy/reproducibility_package/src/plan6_scheduler/: __init__.py  experiment.py  models.py  plotting.py  policies.py  simulator.py  workloads.py
Plan 6/legacy/reproducibility_package/tests/: test_simulator.py
(+28 files in other folders)
